taller6/ejercicio2/redis-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    tier: backend
spec:
  type: 
  ports:
  - port: 6379
    targetPort: redis-server
  selector:
    app: redis
    tier: backend
